// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Date renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      disabled={true}
      placeholder=" "
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      disabled={true}
      placeholder=" "
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ GYDHa"
    disabled={true}
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        disabled={true}
        placeholder=" "
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kBGJNX"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX igbTSY"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX fhOWWW"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm bhrXDV"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder=" "
      readOnly={true}
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder=" "
      readOnly={true}
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder=" "
        readOnly={true}
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX ffJMj"
      dir="rtl"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZkcaX gtbxaE"
      dir="rtl"
      placeholder="Placeholder"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX gmrCnO"
        dir="rtl"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-eqKtKx uXXXN"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX kjRHRl"
      placeholder="medium"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <input
      className="sc-eZkcaX fHjCey"
      placeholder="large"
      type="date"
    />
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM fOxxeU"
    >
      <input
        className="sc-eZkcaX iAgEXF"
        placeholder="xlarge"
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Date supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      medium
    </label>
    <input
      className="sc-eZkcaX jwaXyu"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <label
      className="sc-McAUB clYBoj"
    >
      large
    </label>
    <input
      className="sc-eZkcaX hpzrQJ"
      placeholder="Placeholder"
      type="date"
    />
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDaJoQ NoVrw"
  >
    <div
      className="sc-hhICeM eLTOhr"
    >
      <input
        className="sc-eZkcaX EosSA"
        placeholder="Placeholder"
        type="date"
      />
      <label
        className="sc-eqKtKx aGCUy"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQikvm jrDiqB"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
